--- a/DakkaDataLink/Resources/Spanish.xaml
+++ b/DakkaDataLink/Resources/Spanish.xaml
@@ -80,6 +80,11 @@
     <system:String x:Key="comboboxitem_color_gray">Gris</system:String>
     <system:String x:Key="comboboxitem_color_darkgray">Gris oscuro</system:String>
     <system:String x:Key="textblock_font_size">Tamaño de la fuente:</system:String>
+    <system:String x:Key="textblock_font_weight">Peso de fuente:</system:String>
+    <system:String x:Key="comboboxitem_font_weight_light">Ligero</system:String>
+    <system:String x:Key="comboboxitem_font_weight_normal">Normal</system:String>
+    <system:String x:Key="comboboxitem_font_weight_bold">Negrita</system:String>
+    <system:String x:Key="comboboxitem_font_weight_extrabold">Extra negrita</system:String>
     <system:String x:Key="textblock_flash_on_new_cords">Brilla en nuevas coordenadas</system:String>
 
     <!--Spotter settings-->
