Fixes translation issue

--- a/DakkaDataLink/Resources/English.xaml
+++ b/DakkaDataLink/Resources/English.xaml
@@ -84,7 +84,7 @@
     <system:String x:Key="comboboxitem_font_weight_light">Light</system:String>
     <system:String x:Key="comboboxitem_font_weight_normal">Normal</system:String>
     <system:String x:Key="comboboxitem_font_weight_bold">Bold</system:String>
-    <system:String x:Key="comboboxitem_font_weight_extrabold">ExtraBlod</system:String>
+    <system:String x:Key="comboboxitem_font_weight_extrabold">ExtraBold</system:String>
     <system:String x:Key="textblock_flash_on_new_cords">Flash On New Coords</system:String> 
     
     <!--Spotter settings-->
