--- a/DakkaDataLink/Resources/German.xaml
+++ b/DakkaDataLink/Resources/German.xaml
@@ -30,6 +30,8 @@
     <system:String x:Key="textblock_tooltip_distance">Entfernung</system:String>
     <system:String x:Key="textblock_azimuth">Az:</system:String>
     <system:String x:Key="textblock_tooltip_azimuth">Gradzahl</system:String>
+    <system:String x:Key="textblock_time">Zeit</system:String>
+    <system:String x:Key="textblock_name">Name</system:String>
 
     <!--Spotter_UserControl-->
     <system:String x:Key="textbox_tooltip_distance">Rechte STRG + Pfeiltaste Oben/Unten für 1 tick Schritt. Recht Shift + Pfeiltaste Oben/Unten für 3 tick Schritt.</system:String>
@@ -52,10 +54,12 @@
     
     <system:String x:Key="textblock_server_ip">Server IP:</system:String>
     <system:String x:Key="textbox_server_ip_tooltip">z.B.: 192.168.0.1</system:String>
-    <system:String x:Key="button_connect">zum Server verbinden</system:String>
-    <system:String x:Key="button_start">zum Server werden</system:String>
+    <system:String x:Key="button_connect">Zum Server verbinden</system:String>
+    <system:String x:Key="button_start">Zum Server werden</system:String>
     <system:String x:Key="textblock_user_ip">IP Adresse:</system:String>
     <system:String x:Key="button_copy">IP Addresse kopieren</system:String>
+    <system:String x:Key="textblock_my_callsign">Mein Callsign:</system:String>
+    <system:String x:Key="datagrid_column_header_callsign">Callsign</system:String>
 
     <!--Options-->
     <!--Overlay-->
@@ -85,8 +89,11 @@
     <system:String x:Key="comboboxitem_font_weight_normal">Normal</system:String>
     <system:String x:Key="comboboxitem_font_weight_bold">Fett</system:String>
     <system:String x:Key="comboboxitem_font_weight_extrabold">Extra fett</system:String>
-    <system:String x:Key="textblock_flash_on_new_cords">Flash bei neuen Koordinaten</system:String>
-    
+    <system:String x:Key="textblock_flash_on_new_cords">Flash bei neuen Koordinaten:</system:String>
+    <system:String x:Key="textblock_use_audio_alert_checkbox">Audio bei neuen Koordinaten</system:String>
+    <system:String x:Key="textblock_audio_alert_file">Audio Datei:</system:String>
+    <system:String x:Key="textblock_volume">Lautstärke</system:String>
+
     <!--Spotter settings-->
     <system:String x:Key="groupbox_settings_header">Aufklärereinstellungen</system:String>
     <system:String x:Key="textblock_artillery_progile">Artillerysystem:</system:String>
