--- a/DakkaDataLink/Resources/Russian.xaml
+++ b/DakkaDataLink/Resources/Russian.xaml
@@ -30,6 +30,8 @@
     <system:String x:Key="textblock_tooltip_distance">Дистанция</system:String>
     <system:String x:Key="textblock_azimuth">Азим.:</system:String>
     <system:String x:Key="textblock_tooltip_azimuth">Азимут</system:String>
+    <system:String x:Key="textblock_time">Time</system:String>
+    <system:String x:Key="textblock_name">Name</system:String>
 
     <!--Spotter_UserControl-->
     <system:String x:Key="textbox_tooltip_distance">Правый Ctrl + Вверх/Вниз для 1 шага. Правый Shift + Вверх/Вниз для 3 шагов.</system:String>
@@ -56,6 +58,8 @@
     <system:String x:Key="button_start">Запустить как сервер</system:String>
     <system:String x:Key="textblock_user_ip">Ваш IP-адрес:</system:String>
     <system:String x:Key="button_copy">Скопировать IP-адрес</system:String>
+    <system:String x:Key="textblock_my_callsign">My Callsign:</system:String>
+    <system:String x:Key="datagrid_column_header_callsign">Callsign</system:String>
 
     <!--Options-->
     <!--Overlay-->
@@ -86,6 +90,9 @@
     <system:String x:Key="comboboxitem_font_weight_bold">Жирный</system:String>
     <system:String x:Key="comboboxitem_font_weight_extrabold">Очень жирный</system:String>
     <system:String x:Key="textblock_flash_on_new_cords">Блистайте на новых координатах</system:String>
+    <system:String x:Key="textblock_use_audio_alert_checkbox">Audio On New Coords</system:String>
+    <system:String x:Key="textblock_audio_alert_file">Audio File</system:String>
+    <system:String x:Key="textblock_volume">Volume</system:String>
 
     <!--Spotter settings-->
     <system:String x:Key="groupbox_settings_header">Настройки наблюдателя</system:String>
