--- a/DakkaDataLink/Resources/Spanish.xaml
+++ b/DakkaDataLink/Resources/Spanish.xaml
@@ -30,6 +30,8 @@
     <system:String x:Key="textblock_tooltip_distance">Distancia</system:String>
     <system:String x:Key="textblock_azimuth">Az:</system:String>
     <system:String x:Key="textblock_tooltip_azimuth">Azimut</system:String>
+    <system:String x:Key="textblock_time">Time</system:String>
+    <system:String x:Key="textblock_name">Name</system:String>
 
     <!--Spotter_UserControl-->
     <system:String x:Key="textbox_tooltip_distance">Ctrl derecho + Flecha arriba/abajo para un paso de 1 tick. Shift derecho + Flecha arriba/abajo para un paso de 3 ticks.</system:String>
@@ -56,6 +58,8 @@
     <system:String x:Key="button_start">Iniciar como servidor</system:String>
     <system:String x:Key="textblock_user_ip">Su dirección IP:</system:String>
     <system:String x:Key="button_copy">Copiar dirección IP</system:String>
+    <system:String x:Key="textblock_my_callsign">My Callsign:</system:String>
+    <system:String x:Key="datagrid_column_header_callsign">Callsign</system:String>
 
     <!--Options-->
     <!--Overlay-->
@@ -86,6 +90,9 @@
     <system:String x:Key="comboboxitem_font_weight_bold">Negrita</system:String>
     <system:String x:Key="comboboxitem_font_weight_extrabold">Extra negrita</system:String>
     <system:String x:Key="textblock_flash_on_new_cords">Brilla en nuevas coordenadas</system:String>
+    <system:String x:Key="textblock_use_audio_alert_checkbox">Audio On New Coords</system:String>
+    <system:String x:Key="textblock_audio_alert_file">Audio File</system:String>
+    <system:String x:Key="textblock_volume">Volume</system:String>
 
     <!--Spotter settings-->
     <system:String x:Key="groupbox_settings_header">Configuración del observador</system:String>
