--- a/DakkaDataLink/UserControls/ConnectionsUserControl.xaml
+++ b/DakkaDataLink/UserControls/ConnectionsUserControl.xaml
@@ -10,7 +10,7 @@
         <GroupBox Grid.Row="0" Grid.Column="0" Header="{DynamicResource groupbox_connection_header}">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="My callsign: " VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,5,5,5"/>
+                    <TextBlock Text="{DynamicResource textblock_my_callsign}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,5,5,5"/>
                     <TextBox x:Name="MyCallsign_Textbox" Text="{Binding MyCallsign}" Height="25" Width="155" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,5,5,5"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="5,0,5,0">
@@ -35,7 +35,7 @@
                 </StackPanel>
                 <DataGrid x:Name="ActiveUsers_DataGrid" MaxHeight="400" MinHeight="100" SelectionMode="Single" AutoGenerateColumns="False" CanUserAddRows="False" CanUserSortColumns="False" IsReadOnly="True">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding}" Header="Callsign"/>
+                        <DataGridTextColumn Binding="{Binding}" Header="{DynamicResource datagrid_column_header_callsign}"/>
                     </DataGrid.Columns>
                 </DataGrid>
 
