--- a/DakkaDataLink/Resources/German.xaml
+++ b/DakkaDataLink/Resources/German.xaml
@@ -18,7 +18,7 @@
     <system:String x:Key="statusbar_statusbaritem_header">Benutzer verbunden:</system:String>
 
     <!--About Window-->
-    <system:String x:Key="textblock_description">Ein Tool für die Artillery Koordination, 2024.</system:String>
+    <system:String x:Key="textblock_description">Ein Tool für die Artillery Koordination, 2024-2025.</system:String>
     <system:String x:Key="textblock_author">von [82DK-A|⦿] Witch,PhD</system:String>
     <system:String x:Key="textblock_contributors">Unterstützer:</system:String>
     <system:String x:Key="textblock_version">Version:</system:String>
