Adds missing XML entries for Connect/Disconnect to/from Server

--- a/DakkaDataLink/Resources/English.xaml
+++ b/DakkaDataLink/Resources/English.xaml
@@ -55,6 +55,7 @@
     <system:String x:Key="textblock_server_ip">Server IP or URL:</system:String>
     <system:String x:Key="textbox_server_ip_tooltip">ex: 192.168.0.1</system:String>
     <system:String x:Key="button_connect">Connect to Server</system:String>
+    <system:String x:Key="button_disconnect">Disconnect From Server</system:String>
     <system:String x:Key="button_start">Start as Server</system:String>
     <system:String x:Key="textblock_user_ip">My IP Address:</system:String>
     <system:String x:Key="button_copy">Copy IP Address</system:String>
