--- a/DakkaDataLink/Resources/German.xaml
+++ b/DakkaDataLink/Resources/German.xaml
@@ -55,6 +55,7 @@
     <system:String x:Key="textblock_server_ip">Server IP:</system:String>
     <system:String x:Key="textbox_server_ip_tooltip">z.B.: 192.168.0.1</system:String>
     <system:String x:Key="button_connect">Zum Server verbinden</system:String>
+    <system:String x:Key="button_disconnect">Disconnect From Server</system:String>
     <system:String x:Key="button_start">Zum Server werden</system:String>
     <system:String x:Key="textblock_user_ip">IP Adresse:</system:String>
     <system:String x:Key="button_copy">IP Addresse kopieren</system:String>
