--- a/DakkaDataLink/AboutWindow.xaml
+++ b/DakkaDataLink/AboutWindow.xaml
@@ -19,6 +19,7 @@
         <TextBlock Text="[82DK-☆] Cerber"/>
         <TextBlock Text="[82DK-◆] Wixxarion"/>
         <TextBlock Text="[82DK-A] Chaos"/>
+        <TextBlock Text="[82DK-DR|⦿] •Kimi"/>
         <TextBox Width="255" HorizontalAlignment="Left" IsReadOnly="True" Margin="0,10,0,5">
             https://github.com/Witch-PhD/DakkaDataLink
         </TextBox>
